--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Foodify">
+        android:theme="@style/SplashScreenStyle">
         <activity
             android:name=".ui.DetailsActivity"
             android:theme="@style/DetailsActivity"
